[package]
name = "bloop-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for bloop error observability and LLM tracing"
license = "MIT"
repository = "https://github.com/jaikoo/bloop-rust"

[features]
default = ["tracing"]
tracing = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
